cont15/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: myapp-ingress
  labels:
      name: myapp-ingress
  annotations:
    nginx.ingress.kubernetes.io/rewrite-target: /api/$2
spec:
  rules:
  - http:
      paths:
      - pathType: Exact
        path: "/api(/|$)(.*)"
        backend:
          service:
            name: myapp-svc
            port:
              number: 80
